--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -4,7 +4,7 @@
     right: 55px;
     padding: 10px;
     cursor: pointer;
-    background-color: skyblue;
+    background-color: var(--button-widget-color);
     box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
 	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
     border-radius: 50%;
@@ -16,7 +16,7 @@
     right: 50px;
     padding: 14px;
     cursor: pointer;
-    background-color: skyblue;
+    background-color: var(--button-widget-color);
     box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
 	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
     border-radius: 50%;
