--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -19,7 +19,7 @@
   .label{
     font-size: 16px;
     font-weight: bold;
-    color: #333;
+    color: ver(--dark-text-color);
   }
   
   .input{
@@ -36,15 +36,15 @@
     padding: 12px;
     font-size: 16px;
     font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
+    color: var(--light-text-color);
+    background-color: var(--button-widget-color);
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
   
   .button:hover {
-    background-color: #0056b3;
+    background-color: var(--button-widget-hover-color);
   }
   
   .error {
