--- a/src/pages/SelectEnem/SelectEnem.css
+++ b/src/pages/SelectEnem/SelectEnem.css
@@ -8,6 +8,7 @@
 .search{
     display: flex;
     justify-content: center;
+    margin: 8px;
 }
 
 .search_bar > input {
@@ -28,27 +29,59 @@
 }
 
 .program_items{
-    min-width: 128px;
-    min-height: 128px;
-    margin: 16px;
+    min-width: 96px;
+    min-height: 96px;
+    margin: 4px;
     /*background-color: grey;*/
     justify-content: center;
 }
 
-.program_buttons{
+.program_buttons_hot{
     width: 100%;
     height: 100%;
     color: #fff;
-    background-color: gray;
+    background-color: rgb(255, 67, 67);
     border: 0;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-.program_buttons:hover {
-    background-color: rgb(81, 81, 81);
+.program_buttons_hot:hover {
+    background-color: rgb(161, 40, 40);
   }
+
+.program_buttons_cool{
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: rgb(67, 117, 255);
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.program_buttons_cool:hover {
+    background-color: rgb(43, 74, 161);
+}
+
+.startButton{
+    margin: 16px;
+    line-height: 2.5;
+    padding: 10px 20px;
+    min-width: 256px;
+    font-size: 20px;
+    background-color: #ffffff;
+    border: 1;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.startButton:hover {
+    background-color: #c3c3c3;
+}
 
 .backButton{
     line-height: 2.5;
