--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -21,3 +21,42 @@
 	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
     border-radius: 50%;
 }
+
+.popUp {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.program_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.program_items{
+    min-width: 96px;
+    min-height: 96px;
+    margin: 4px;
+    /*background-color: grey;*/
+    justify-content: center;
+}
+
+.program_buttons_hot{
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: var(--button-widget-color);
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.program_buttons_hot:hover {
+    background-color: var(--button-widget-hover-color);
+  }
