--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -32,21 +32,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.program_container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.program_items{
-    min-width: 96px;
-    min-height: 96px;
-    margin: 4px;
-    /*background-color: grey;*/
-    justify-content: center;
-}
-
-.program_buttons_hot{
+.slot_send_button{
     width: 100%;
     height: 100%;
     color: #fff;
@@ -57,6 +43,6 @@
     transition: background-color 0.3s ease;
 }
 
-.program_buttons_hot:hover {
+.slot_send_button:hover {
     background-color: var(--button-widget-hover-color);
   }
