--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,63 @@
 }
 
 :root {
-  --button-widget-color: #61dafb;
-  --button-widget-hover-color: #0d8fbd;
+  /* Primary */
+  --primary-100: #f2f9ff;
+  --primary-200: #ceecff;
+  --primary-300: #aae2fe;
+  --primary-400: #86dcfd;
+  --primary-500: #61d9fa;
+  --primary-600: #36aec5;
+  --primary-700: #1f8590;
+  --primary-800: #12585b;
+  --primary-900: #072626;
+
+  /* Neutral */
+  --neutral-100: #fafbfc;
+  --neutral-200: #e5e9eb;
+  --neutral-300: #d1d7da;
+  --neutral-400: #bec6c9;
+  --neutral-500: #abb5b8;
+  --neutral-600: #889193;
+  --neutral-700: #656e6f;
+  --neutral-800: #444a4b;
+  --neutral-900: #222626;
+
+  /* HOT */
+  --hot-100: #fff5f2;
+  --hot-200: #ffcdc2;
+  --hot-300: #ff9f93;
+  --hot-400: #ff6c63;
+  --hot-500: #ff3333;
+  --hot-600: #c91111;
+  --hot-700: #930404;
+  --hot-800: #5c0000;
+  --hot-900: #260000;
+
+  /* COOL */
+  --cool-100: #f5f2ff;
+  --cool-200: #d2c9ff;
+  --cool-300: #ab9fff;
+  --cool-400: #7e76ff;
+  --cool-500: #4d4dff;
+  --cool-600: #252fc9;
+  --cool-700: #122193;
+  --cool-800: #0a185c;
+  --cool-900: #040c26;
+
+  --button-widget-color: var(--hot-500);
+  --button-widget-hover-color: var(--primary-700);
   --light-text-color: #fff;
   --dark-text-color: #333;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  :root {
+    --button-widget-color: #61dafb;
+    --button-widget-hover-color: #0d8fbd;
+    --light-text-color: #fff;
+    --dark-text-color: #ccc;
+  }
 }
 
 /* .App-logo {
