--- a/src/pages/Initial/Initial.css
+++ b/src/pages/Initial/Initial.css
@@ -19,8 +19,8 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
 
-.button-style:hover {
-  background-color: #0d8fbd;
+  &:hover {
+    background-color: var(--button-widget-hover-color);
+  }
 }
