--- a/src/pages/SelectEnem/SelectEnem.css
+++ b/src/pages/SelectEnem/SelectEnem.css
@@ -13,7 +13,7 @@
 
 .search_bar > input {
   border: none !important;
-  background-color: #f0f2f5;
+  background-color: var(--neutral-100);
 }
 
 .search_bar > input:focus {
@@ -24,45 +24,42 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /*background-color: aqua*/
 }
 
 .program_items {
   min-width: 96px;
   min-height: 96px;
   margin: 4px;
-  /*background-color: grey;*/
   justify-content: center;
 }
 
-.program_buttons_hot {
+.program_buttons_H {
   width: 100%;
   height: 100%;
-  color: #fff;
-  background-color: rgb(255, 67, 67);
+  color: var(--light-text-color);
+  background-color: var(--hot-500);
   border: 0;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
-.program_buttons_hot:hover {
-  background-color: rgb(161, 40, 40);
+.program_buttons_H:hover {
+  background-color: var(--hot-600);
 }
 
-.program_buttons_cool {
+.program_buttons_C {
   width: 100%;
   height: 100%;
-  color: #fff;
-  background-color: rgb(67, 117, 255);
+  color: var(--light-text-color);
+  background-color: var(--cool-500);
   border: 0;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-
-.program_buttons_cool:hover {
-  background-color: rgb(43, 74, 161);
+.program_buttons_C:hover {
+  background-color: var(--cool-600);
 }
 
 .startButton {
