--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -1,4 +1,5 @@
 .upload-button{
+    position: fixed;
     bottom: 50px;
     right: 55px;
     padding: 10px;
@@ -10,6 +11,7 @@
 }
 
 .import-button{
+    position: fixed;
     top: 50px;
     right: 50px;
     padding: 14px;
