--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -26,6 +26,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 100;
     transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 20px;
@@ -46,3 +47,8 @@
 .slot_send_button:hover {
     background-color: var(--button-widget-hover-color);
   }
+
+.monaco-style{
+    display: flex;
+    align-items: center;
+}
