--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -1,29 +1,28 @@
-.upload-button {
-  position: fixed;
-  bottom: 50px;
-  right: 55px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: var(--button-widget-color);
-  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
+.upload-button{
+    position: fixed;
+    bottom: 50px;
+    right: 55px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: var(--button-widget-color);
+    box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
+	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
+    border-radius: 50%;
 }
 
-.import-button {
-  position: fixed;
-  top: 50px;
-  right: 50px;
-  padding: 14px;
-  cursor: pointer;
-  background-color: var(--button-widget-color);
-  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
+.import-button{
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    padding: 14px;
+    cursor: pointer;
+    background-color: var(--button-widget-color);
+    box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
+	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
+    border-radius: 50%;
 }
 
 .popUp {
-<<<<<<< HEAD
     position: fixed;
     top: 50%;
     left: 50%;
@@ -32,30 +31,20 @@
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-=======
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
->>>>>>> e865f659e178e6d39c5cdd8bbc63d7189386d55c
 }
 
-.slot_send_button {
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  background-color: var(--button-widget-color);
-  border: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.slot_send_button{
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: var(--button-widget-color);
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .slot_send_button:hover {
-<<<<<<< HEAD
     background-color: var(--button-widget-hover-color);
   }
 
@@ -63,7 +52,3 @@
     display: flex;
     align-items: center;
 }
-=======
-  background-color: var(--button-widget-hover-color);
-}
->>>>>>> e865f659e178e6d39c5cdd8bbc63d7189386d55c
