--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,4 +1,4 @@
-.container {
+.login-container {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
@@ -7,16 +7,16 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.form {
+.login-form {
   display: flex;
   flex-direction: column;
 }
 
-.form-field {
+.login-form-field {
   margin-bottom: 20px;
 }
 
-.label {
+.login-label {
   font-size: 16px;
   font-weight: bold;
   color: ver(--dark-text-color);
