--- a/src/pages/SelectEnem/SelectEnem.css
+++ b/src/pages/SelectEnem/SelectEnem.css
@@ -2,86 +2,200 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  /*background-color: blue;*/
-}
-
-.search {
-  display: flex;
   justify-content: center;
-  margin: 8px;
-}
-
-.search_bar > input {
-  border: none !important;
+  max-width: 1440px;
+  min-height: 100dvh;
+  margin: auto;
   background-color: var(--neutral-100);
-}
+  margin-bottom: 10rem;
 
-.search_bar > input:focus {
-  outline-width: 0;
-}
+  .player_settings {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 
-.program_Container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+  /*responsive */
+  @media screen and (max-width: 900px) {
+    .player_settings {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
-.program_items {
-  min-width: 96px;
-  min-height: 96px;
-  margin: 4px;
-  justify-content: center;
-}
+      width: 100%;
+    }
+  }
 
-.program_buttons_H {
-  width: 100%;
-  height: 100%;
-  color: var(--light-text-color);
-  background-color: var(--hot-500);
-  border: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+  .player_settings_item.H {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem 0.5rem;
+    gap: 0.5rem;
+    background-color: var(--hot-100);
+    border: 3px solid var(--hot-200);
+  }
 
-.program_buttons_H:hover {
-  background-color: var(--hot-600);
-}
+  .player_settings_item.C {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem 0.5rem;
+    gap: 0.5rem;
+    background-color: var(--cool-100);
 
-.program_buttons_C {
-  width: 100%;
-  height: 100%;
-  color: var(--light-text-color);
-  background-color: var(--cool-500);
-  border: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-.program_buttons_C:hover {
-  background-color: var(--cool-600);
-}
+    border: 3px solid var(--cool-200);
+  }
 
-.startButton {
-  margin: 16px;
-  line-height: 2.5;
-  padding: 10px 20px;
-  min-width: 256px;
-  font-size: 20px;
-  background-color: #ffffff;
-  border: 1;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+  .player_name_input_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 8px;
+    word-break: keep-all;
+  }
 
-.startButton:hover {
-  background-color: #c3c3c3;
-}
+  .player_name_input {
+    background-color: var(--neutral-100);
+    border-radius: 0.5rem;
+    width: 100%;
+    font-size: 1.5rem;
+    padding: 0.5rem 0.5rem;
+    outline: none !important;
 
-.backButton {
-  line-height: 2.5;
-  width: 64px;
-  height: 40px;
-  justify-content: center;
+    transition: border 0.3s ease;
+
+    border: 3px solid var(--neutral-300);
+  }
+
+  .player_name_input:focus {
+    border: 3px solid var(--neutral-900);
+  }
+
+  .program_Container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+
+  @media screen and (max-width: 450px) {
+    .program_Container {
+      display: flex;
+
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+    }
+  }
+
+  .program_items {
+    width: 100%;
+    margin: 4px;
+    justify-content: center;
+  }
+
+  .program_buttons {
+    display: flex;
+
+    width: 100%;
+    height: 100%;
+    color: var(--dark-text-color);
+    background-color: var(--neutral-100);
+    border: 3px solid var(--neutral-300);
+    border-radius: 0.5rem;
+    padding: 1rem 1rem;
+    cursor: pointer;
+    transition: background-color color 0.3s ease;
+
+    .label {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: baseline;
+      margin: auto;
+      gap: 1rem;
+      font-size: 1.5rem;
+    }
+    @media screen and (max-width: 450px) {
+      .label {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        gap: 1rem;
+        font-size: 1.5rem;
+      }
+    }
+
+    .num {
+      font-size: 3rem;
+    }
+
+    &.H.selected {
+      background-color: var(--hot-500);
+
+      color: var(--light-text-color);
+      border: none;
+    }
+    &.C.selected {
+      background-color: var(--cool-500);
+
+      color: var(--light-text-color);
+      border: none;
+    }
+    &:hover {
+      background-color: var(--neutral-200);
+    }
+  }
+
+  .match_settings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 1024px;
+    margin: 2rem auto;
+    gap: 1rem;
+    .tern_select {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      max-width: 20rem;
+      label {
+        word-break: keep-all;
+      }
+    }
+  }
+
+  .actions {
+    position: fixed;
+    bottom: 0;
+    z-index: 999;
+
+    background-color: var(--neutral-100);
+    border-top: 1px solid var(--neutral-200);
+
+    left: 0;
+    display: flex;
+    justify-content: center;
+    padding: 1rem 1rem;
+    flex-direction: row;
+    width: 100dvw;
+    align-items: center;
+    gap: 1rem;
+  }
 }
