--- a/src/components/field.css
+++ b/src/components/field.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--primary-100);
-  aspect-ratio: 1/1;
+  flex-shrink: 0;
   border: 1px solid var(--primary-200);
   transition: background-color 0.3s ease;
 }
@@ -117,7 +117,10 @@
   max-width: 100dvw;
   max-height: 100dvh;
   height: 100%;
-  width: 100%;
-  aspect-ratio: 1;
   background-color: var(--primary-100);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
