--- a/src/pages/EditMap/EditMap.css
+++ b/src/pages/EditMap/EditMap.css
@@ -10,7 +10,18 @@
     gap: 1rem;
     flex-direction: row;
   }
-  .map{
+  .map {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    margin-top: 2rem;
+    overflow: hidden;
+    &::after {
+      content: "";
+      display: block;
+      padding-top: 100%;
+    }
   }
 }
