--- a/src/pages/EditMap/EditMap.css
+++ b/src/pages/EditMap/EditMap.css
@@ -11,17 +11,15 @@
     flex-direction: row;
   }
   .map {
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+
     width: 100%;
-    margin-top: 2rem;
+    height: 100%;
+
+    container-name: field-container;
+    container-type: inline-size;
     overflow: hidden;
-    &::after {
-      content: "";
-      display: block;
-      padding-top: 100%;
-    }
   }
 }
