--- a/src/pages/EditScript/EditScript.css
+++ b/src/pages/EditScript/EditScript.css
@@ -1,25 +1,25 @@
-.upload-button{
-    position: fixed;
-    bottom: 50px;
-    right: 55px;
-    padding: 10px;
-    cursor: pointer;
-    background-color: var(--button-widget-color);
-    box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
-	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
-    border-radius: 50%;
+.upload-button {
+  position: fixed;
+  bottom: 50px;
+  right: 55px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: var(--button-widget-color);
+  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
 }
 
-.import-button{
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    padding: 14px;
-    cursor: pointer;
-    background-color: var(--button-widget-color);
-    box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
-	-webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, .3);
-    border-radius: 50%;
+.import-button {
+  position: fixed;
+  top: 50px;
+  right: 50px;
+  padding: 14px;
+  cursor: pointer;
+  background-color: var(--button-widget-color);
+  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
 }
 
 .select_save_slot {
@@ -41,10 +41,5 @@
 }
 
 .slot_send_button:hover {
-    background-color: var(--button-widget-hover-color);
-  }
-
-.monaco-style{
-    display: flex;
-    align-items: center;
+  background-color: var(--button-widget-hover-color);
 }
