--- a/src/pages/Match/Match.css
+++ b/src/pages/Match/Match.css
@@ -115,7 +115,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
     height: 100dvh;
     width: 100%;
   }
@@ -126,11 +125,12 @@
     justify-content: center;
     width: 100%;
     gap: 1rem;
-    margin: 1rem;
     border-radius: 1rem;
-    padding: 1rem;
     background-color: var(--neutral-100);
     box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
+    /* こちらの環境だと設定が最適だが、この設定を使用して ウィジェットが崩れる場合は下の２つの設定を適宜削除*/
+    margin-top: -2rem; 
+    z-index: 1000; 
 
     button.control {
       padding: 1rem 2rem;
