--- a/src/pages/Match/Match.css
+++ b/src/pages/Match/Match.css
@@ -8,7 +8,8 @@
   width: auto;
   max-width: 1600px;
   margin: 0 auto;
-
+  background-color: var(--neutral-100);
+  
   .player_container {
     display: flex;
     flex-direction: column;
@@ -76,6 +77,7 @@
     }
 
     .log {
+      background-color: white;
       height: 100%;
       overflow-y: auto;
       padding: 1rem;
